// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.12
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multi expense 1`] = `
<div>
  <h1>
    Viewing 
    14
     
    expenses
     totalling 
    $0.12
  </h1>
</div>
`;
